fix overlapping css

--- a/src/components/styles/Skills.css
+++ b/src/components/styles/Skills.css
@@ -37,13 +37,11 @@
 }
 .img-box {
     display: grid;
-    height: 100%;
 }
 .skills-img {
   transform: rotate(-90deg);
   max-width: 80%;
   max-height: 100vh;
-  margin: auto;
 }
 @media screen and (min-width: 75rem) {
     .skills-certs-wrapper {
@@ -67,21 +65,11 @@
         margin-right: 3rem;
     }
 }
-
 @media screen and (max-width: 75rem) {
     .skills-certs-wrapper {
         padding: 4rem 0 .5rem;
     }
+    .skills-img {
+        margin: 0 auto
+    }
 }
-/* @media screen and (min-width: 62rem) {
-    .skills-wrapper, .certs-wrapper {
-        flex-wrap: nowrap;
-        flex-direction: row;
-    }
-} */
-
-/* @media screen and (max-width: 61.9375rem) {
-    .skills-certs-wrapper h2 {
-        text-align: center;
-    }
-} */
